@@ -68,13 +68,13 @@
     <td>CC proxies</td>
     <td class="good">Yes</td>
     <td class="good">Yes</td>
-    <td class="bad">FIXME NONE</td>
+    <td class="good">Yes</td>
   </tr>
   <tr>
     <td>CC DHCP options</td>
     <td class="good">Yes/Advanced</td>
     <td class="good">Yes</td>
-    <td class="bad">FIXME NONE</td>
+    <td class="good">Yes</td>
   </tr>
   <tr>
     <td>Partitioning dump info</td>
@@ -96,8 +96,8 @@
   </tr>
   <tr>
     <td>make.conf edit CFLAGS if dynamic</td>
-    <td class="bad">FIXME No</td>
-    <td class="good">Yes, doesn't hurt anything</td>
+    <td class="good">Yes</td>
+    <td class="good">Yes</td>
     <td class="good">Yes</td>
   </tr>
   <tr>
@@ -170,7 +170,7 @@
     <td>Set network gateway device</td>
     <td class="good">Yes, required</td>
     <td class="bad">FIXME NONE</td>
-    <td class="bad">FIXME BUGGY</td>
+    <td class="good">Yes</td>
   </tr>
   <tr>
     <td>NIS domain name</td>
@@ -182,13 +182,13 @@
     <td>Networking proxies (working in BE?)</td>
     <td class="good">Yes</td>
     <td class="bad">FIXME NO</td>
-    <td class="bad">FIXME NO</td>
+    <td class="good">Yes</td>
   </tr>
   <tr>
     <td>DNS Servers</td>
     <td class="good">Yes</td>
     <td class="bad">FIXME NO</td>
-    <td class="bad">Yes</td>
+    <td class="good">Yes</td>
   </tr>
   <tr>
     <td>Manual extra packages</td>
