@@ -1,9 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.512 2005/12/05 03:39:26 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.513 2005/12/06 00:50:48 codeman Exp $
 
 *GLI-0.3 (27 Oct 2005)
+
+  5 Dec 2005; Preston Cody <codeman@gentoo.org>
+  webgli: dhcp options in CC and post-install.
+  updated comparison chart.
 
   4 Dec 2005; Preston Cody <codeman@gentoo.org>
   webgli_template.html: valign=top on left side.
